# hyper-cmd

./: .gitignore  AGENTS.md  LICENSE  MCP_README.md  README.md  SETUP_TODO.md  architecture.md  mcp-config.json  plugin-guide.md  pyproject.toml  test_mcp.py
.github/workflows/: test.yml
.hyper/: .gitignore  README.md  config.yaml
.hyper/plugins/hello_world/: __init__.py  plugin.py  plugin.yaml
.hyper/plugins/test_runner/: __init__.py  plugin.py  plugin.yaml
src/hyper_cmd/: config.py  mcp_server.py
src/hyper_cmd/commands/: __init__.py  base.py  init.py  mcp_init.py  registry.py
src/hyper_cmd/container/: __init__.py  simple_container.py
src/hyper_cmd/plugins/: loader.py  registry.py
src/hyper_cmd/ui/: components.py  renderer.py
src/hyper_cmd/ui/themes/: base.py
src/hyper_cmd/ui/widgets/: __init__.py  base.py
src/hyper_core/: __init__.py  cli.py  config.py  mcp_server.py  protocols.py
src/hyper_core/commands/: __init__.py  base.py  init.py  mcp_init.py  registry.py
src/hyper_core/container/: __init__.py  base_container.py  providers.py  simple_container.py
src/hyper_core/plugins/: __init__.py  loader.py  registry.py
src/hyper_core/ui/: __init__.py  components.py  containers.py  engine.py  framework.py  renderer.py
src/hyper_core/ui/themes/: __init__.py  base.py
src/hyper_core/ui/widgets/: __init__.py  base.py
tests/: test_base_command_subprocess.py  test_cli.py  test_cli_ui.py  test_commands.py  test_completion.py  test_config.py  test_container.py  test_dependencies.py  test_framework_usage.py  test_import.py  test_init_command.py  test_integration.py  test_mcp_init_command.py  test_mcp_server.py  test_mcp_subprocess_integration.py  test_plugin_loading.py  test_plugins.py  test_themes.py  test_ui.py  test_ui_integration.py
